# city-helper-ai-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENT_ARCHITECTURE.md  AGENT_ROUTING_BLUEPRINT.md  AGENT_ROUTING_DIAGRAM.html  ARCHITECTURE.md  BRANCH_PROTECTION_SETUP.md  CI_CD.md  CONFIGURATION.md  DOCKER.md  Dockerfile  GITHUB_CONTAINER_REGISTRY.md  GOOGLE_OAUTH_SETUP.md  LOGGING.md  Makefile  PRE_COMMIT.md  README.md  SECURITY_CHECKLIST.md  TESTING.md  WORKFLOW.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.py
.env/: .env.example
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  docker-publish.yml  pr-checks.yml
app/: __init__.py  main.py
app/api/routes/: auth.py  chat.py  chat_sessions.py  health.py
app/core/: logging_setup.py
app/core/config/: __init__.py  base.py  environments.py  loader.py  secrets.py
app/schemas/: __init__.py  agent.py  auth.py  chat.py  chat_session.py
app/services/: __init__.py  auth_service.py  chat_service.py  chat_session_service.py  maps_service.py  openai_service.py  places_service.py
app/utils/: __init__.py  mock_data.py  oauth.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_agent_routing.py
